# mediscara.fiware

./: .gitignore  model.py  production.py  requirements.txt  setup.cfg
src/fiware/: __init__.py  fiware.py  model.py  production.py
tests/: test_collaborative.py  test_fiware.py
