[metadata]
name = FIWARE Orion Context Broker Python API
description = This package is used to interface with the FIWARE OCB
version = attr: fiware.__version__
author = Peter Puska
author_email = ppuska@lasram.hu

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests >= 2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyprogen = pyprogen.main:main

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
    pylint >= 2.13